--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <input placeholder="some link" type="text" value="https://shulhan93.github.io/pre-course-hw-js/">
   <!-- Lesson 1 -->
   <script src="lesson-01/02.js"></script>
 
